package com.enhui.design.adapter.interfaceadapter;

public interface Interface1 {

    public void method1();
    public void method2();
    public void method3();
    public void method4();
    public void method5();
}
