package com.enhui.design.adapter.interfaceadapter;

public abstract class AbsAdapter implements Interface1 {
    @Override
    public void method1() {

    }

    @Override
    public void method2() {

    }

    @Override
    public void method3() {

    }

    @Override
    public void method4() {

    }

    @Override
    public void method5() {

    }
}
